--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://adaptermuseum.com">The Adapter Museum</a>
+                                    <a href="https://www.patreon.com/esr">Support Eric S. Raymond on Patreon</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280431">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17279175">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=cobralibre">cobralibre</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528668383"
+                                            href="https://news.ycombinator.com/user?id=kuwze">kuwze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528652380"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    3 points
+                                    4 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528716003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528716603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
