--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://appalaszynski.github.io/lemon/">Lemon Minimal and responsive CSS framework for fast building websites</a>
+                                    <a href="https://www.businessinsider.de/arron-banks-brexit-russia-leave-eu-met-with-kremlin-figures-to-discuss-business-opportunities-2018-6?r=UK&IR=T">Leading Brexit campaigners held secret meetings with Russian officials</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277730">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280201">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Karonaval">Karonaval</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528632489"
+                                            href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528665674"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    5 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528718404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528719004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
