--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528662748"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    216 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=dredmorbius">dredmorbius</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528567652"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    216 points
                                 </span>
                             </td>
                         </tr>
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.mois.ee/english/">Estonian Manors</a>
+                                    <a href="https://brandur.org/graphql">Living APIs and the Case for GraphQL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245678">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269028">
                                         
-                                            56 comments
+                                            79 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hydrox24">hydrox24</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528278743"
+                                            href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528486847"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     209 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/martenbjork/github-xp">GitHub XP – GitHub Windows XP Theme</a>
+                                    <a href="http://www.mois.ee/english/">Estonian Manors</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17241612">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17245678">
                                         
-                                            62 comments
+                                            56 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vlucas">vlucas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528229826"
+                                            href="https://news.ycombinator.com/user?id=hydrox24">hydrox24</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528278743"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     209 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528720805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528721404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
