--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=ebursztein">ebursztein</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528658019"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    274 points
+                                    277 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://developer.apple.com/videos/play/wwdc2018/715/">Network.framework: A modern alternative to sockets</a>
+                                    <a href="https://github.com/s-matyukevich/raspberry-pi-os">Learning operating system development using Linux kernel and Raspberry Pi</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265288">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17282000">
                                         
-                                            149 comments
+                                            25 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pjmlp">pjmlp</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528465660"
+                                            href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528694239"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    193 points
+                                    191 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528724406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528725003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
