--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -99,9 +99,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
+                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
                                 </span>
                             </td>
                         </tr>
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                    <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
                                 </span>
                             </td>
                         </tr>
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
+                                    <a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/jsr.12711">Caffeine dosing strategies to optimize alertness during sleep loss</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17254055">
                                         
-                                            45 comments
+                                            223 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528662748"
+                                            href="https://news.ycombinator.com/user?id=nickcw">nickcw</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528357990"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    219 points
+                                    220 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528725003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528725605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
