--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -245,7 +245,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17257239">
                                         
-                                            515 comments
+                                            516 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nwrk">nwrk</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528725605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528726206" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
