--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -455,17 +455,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/privacy/comments/8ps94a/it_appears_reddit_direct_messages_are_being/">Reddit DMs will not reach their destination if they contain certain text</a>
+                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17275401">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
                                         
-                                            68 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ValentineC">ValentineC</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528583901"
+                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528662748"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     222 points
                                 </span>
@@ -479,19 +479,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
+                                    <a href="https://www.reddit.com/r/privacy/comments/8ps94a/it_appears_reddit_direct_messages_are_being/">Reddit DMs will not reach their destination if they contain certain text</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17275401">
                                         
-                                            45 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528662748"
+                                            href="https://news.ycombinator.com/user?id=ValentineC">ValentineC</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528583901"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    221 points
+                                    222 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528725605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528726206" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
