--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
+                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=hkmurakami">hkmurakami</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528210657"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    443 points
+                                    444 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528726206" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528726804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
