--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
+                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lkml.org/lkml/2018/6/5/769">Torvalds: Standards need to be questioned</a>
+                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17242103">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
                                         
-                                            172 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=l1k">l1k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528233068"
+                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528662748"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     223 points
                                 </span>
@@ -455,19 +455,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://webkul.github.io/vivid/">Open Source SVG Icons Library – Vivid.js</a>
+                                    <a href="https://lkml.org/lkml/2018/6/5/769">Torvalds: Standards need to be questioned</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280011">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242103">
                                         
-                                            46 comments
+                                            172 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nitishkmrk">nitishkmrk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528662748"
+                                            href="https://news.ycombinator.com/user?id=l1k">l1k</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528233068"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    222 points
+                                    223 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528726206" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528726804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
