--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
+                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
                                 </span>
                             </td>
                         </tr>
@@ -317,13 +317,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17280558">
                                         
-                                            391 comments
+                                            393 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wuschel">wuschel</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528670227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    845 points
+                                    853 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528726206" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528726804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
