--- a/jobs/page3.html
+++ b/jobs/page3.html
@@ -99,6 +99,20 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
@@ -144,20 +158,6 @@
                                     <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17279322" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://seedlang.com/">I am bootstrapping a video-based Duolingo competitor</a>
                                 </span>
                             </td>
                         </tr>
@@ -588,7 +588,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528727405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528728004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
