--- a/jobs/index.html
+++ b/jobs/index.html
@@ -193,7 +193,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://readme.io/careers/#job-enterprise-customer-success">ReadMe (YC W15) Is Hiring a API-Loving Enterprise Customer Success Manager</a>
+                                    <a href="https://readme.io/careers/#job-enterprise-customer-success">ReadMe (YC W15) is hiring an API-loving Enterprise Customer Success Manager</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -583,7 +583,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528737605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528738204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
