--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -113,9 +113,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
+                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
                                 </span>
                             </td>
                         </tr>
@@ -239,17 +239,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://joelcalifa.com/blog/tiny-wins/">Tiny Wins</a>
+                                    <a href="https://www.audubon.org/news/scientists-pinpoint-secret-password-unlocks-cowbirds-self-identity">Scientists Pinpoint the Secret Password That Unlocks Cowbirds' Self-Identity</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17281563">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17281367">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bemmu">bemmu</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528688190"
+                                            href="https://news.ycombinator.com/user?id=dwainetrain">dwainetrain</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528685123"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     5 points
                                 </span>
@@ -417,7 +417,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528738805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528739216" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
