--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.mymoneyblog.com/country-time-lemonade-stand-legalade.html">Country Time Lemonade Will Pay Legal Fees for Unlicensed Lemonade Stands</a>
+                                    <a href="https://www.reuters.com/article/us-trump-effect-solar-insight/billions-in-u-s-solar-projects-shelved-after-trump-panel-tariff-idUSKCN1J30CT">Billions in U.S. solar projects shelved after Trump panel tariff</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283758">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17256522">
                                         
-                                            141 comments
+                                            179 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528721316"
+                                            href="https://news.ycombinator.com/user?id=rgbrenner">rgbrenner</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528384637"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    216 points
+                                    217 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528741212" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528741808" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
