--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -127,6 +127,20 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17279737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/acarabott/chromeREPL">ChromeREPL, Interact with Chrome from Sublime Text</a>
@@ -144,20 +158,6 @@
                                     <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    320 points
+                                    321 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528749609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528750207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
