--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://getbitbar.com/plugins/Lifestyle#.Wx1zs_ozpTE.hackernews">Lifestyle plugins for BitBar – Put anything in your Mac OS X menu bar</a>
+                                    <a href="https://marc.info/?l=openbsd-misc&m=152872551609819&w=2">Firefox does not have a well-designed privsep model</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17279599">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17287376">
                                         
-                                            28 comments
+                                            50 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=olds0ul">olds0ul</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528656843"
+                                            href="https://news.ycombinator.com/user?id=bigato">bigato</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528743730"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     103 points
                                 </span>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://calver.org/">Calendar Versioning</a>
+                                    <a href="https://blog.openai.com/language-unsupervised/">Improving Language Understanding with Unsupervised Learning</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17278936">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17286810">
                                         
-                                            43 comments
+                                            5 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dmoreno">dmoreno</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528649613"
+                                            href="https://news.ycombinator.com/user?id=gdb">gdb</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528740752"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     103 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528764006" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528764609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
