--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528740324"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    104 points
+                                    105 points
                                 </span>
                             </td>
                         </tr>
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://nautil.us//blog/braces-have-made-snoring-a-modern-health-problem">Braces Have Made Snoring a Modern Health Problem</a>
+                                    <a href="https://twitter.com/DanielMicay/status/1006299769214562305">CopperheadOS has imploded</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17282828">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            55 comments
+                                            23 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmcpinto">pmcpinto</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528707628"
+                                            href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528760102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     88 points
                                 </span>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://nodesecurity.io/advisories/654">Critical vulnerability of NPM package macaddress</a>
+                                    <a href="http://nautil.us//blog/braces-have-made-snoring-a-modern-health-problem">Braces Have Made Snoring a Modern Health Problem</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283394">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17282828">
                                         
-                                            84 comments
+                                            55 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tekkk">tekkk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528716581"
+                                            href="https://news.ycombinator.com/user?id=pmcpinto">pmcpinto</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528707628"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    87 points
+                                    88 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528770610" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528771208" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
