--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528752265"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    97 points
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=domargan">domargan</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528741504"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    91 points
+                                    92 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.xtof.info/blog/?p=985">The 640K memory limit of MS-DOS</a>
+                                    <a href="https://www.edge.org/conversation/rory_sutherland-this-thing-for-which-we-have-no-name">This Thing for Which We Have No Name (2014)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274672">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17285846">
                                         
-                                            68 comments
+                                            28 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528574145"
+                                            href="https://news.ycombinator.com/user?id=DiabloD3">DiabloD3</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528735129"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     90 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528779006" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528779609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
