--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/s/trustissues/the-lifespan-of-a-lie-d869212b1f62">The Lifespan of a Lie – Why can’t we escape the Stanford Prison Experiment?</a>
+                                    <a href="https://twitter.com/UID_/status/1005795008581169152">“All accredited journalists at the #KimTrumpSummit get a free USB fan.”</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17287319">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17285062">
                                         
-                                            99 comments
+                                            90 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fermigier">fermigier</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528743459"
+                                            href="https://news.ycombinator.com/user?id=pavel_lishin">pavel_lishin</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528730821"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    182 points
+                                    185 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528779006" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528779609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
