--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.toptal.com/cross-platform/haxe-language-cross-platform">Haxe: Cross-Platform Development's Best-Kept Secret</a>
+                                    <a href="https://blog.graphql.guide/introducing-the-graphql-guide-11a5ae48628a?source=search_post---------0">New Book from John Resig, the GraphQL Guide</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255490">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289048">
                                         
-                                            41 comments
+                                            39 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kevin_bloch">kevin_bloch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528377578"
+                                            href="https://news.ycombinator.com/user?id=sbr464">sbr464</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528754804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     202 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528779006" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528779609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
